Fix styling on iphone.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -694,7 +694,6 @@ form.simple_form {
 	}
 	.all-thumbnails {
 		display: inline-block;
-		width: 10em;
 		text-align: center;
 		img {
 			width: 100%;
